Edit reminder inline

--- a/app/assets/stylesheets/partials/_layout.sass
+++ b/app/assets/stylesheets/partials/_layout.sass
@@ -4,19 +4,19 @@
   position: relative
   width: 80%
   +pie-clearfix
-  
+
 .fourth
   display: inline
   float: left
   width: 25%
-  
+
 .horizontal
   +pie-clearfix
   li
     display: inline
     float: left
     padding-right: 15px
-    
+
 #container
   height: auto !important
   margin: 0 auto -142px
@@ -24,3 +24,6 @@
 
 .push, #footer
   height: 142px
+
+.hidden
+  display: none
