inline edit form styles

--- a/app/assets/stylesheets/partials/_app.sass
+++ b/app/assets/stylesheets/partials/_app.sass
@@ -66,7 +66,7 @@
   &.list
     margin-top: 10px
     +box-shadow(rgba(0, 0, 0, 0.07) 0 0 5px)
-    td
+    .modern > tbody > tr > td
       background: #fff
       border-bottom: 1px solid #e9e9e9
       color: #666
@@ -76,12 +76,13 @@
         font-weight: bold
       &.reminder_container
         background: $two + #777
+        padding: 10px 20px
         
-    tr
+    .modern > tbody > tr
       &:last-child td
         border: none
       &:hover, &:focus
-        td
+        > td
           background: $two + #777
       &.reminder.active td
         background: $two + #777
@@ -93,19 +94,27 @@
   //background: #fff
   //margin: 0 0 15px
   //padding: 30px 15px 20px
+  padding-bottom: 10px
   position: relative
   //+border-radius(3px)
   //+box-shadow(rgba(0, 0, 0, 0.1) 0 0 5px)
+  +pie-clearfix
   label
     color: rgba(0, 0, 0, 0.5)
     display: block
     font: 14px Amaranth
-  .mceEditor
-    position: absolute
-    right: 30px
-    top: 30px
-    table
-      width: 60%
+  .text-editor
+    width: 55%
+
+  input[type=email], input[type=password], input[type=text]
+    border: 1px solid rgba(0, 0, 0, 0.4)
+    font-size: 12px
+    margin-bottom: 10px
+    padding: 5px 10px
+    width: 246px
+    +box-shadow(rgba(0, 0, 0, 0.1) 1px 1px 3px inset)
+    &:hover, &:focus, &:active
+      border-color: $one
 
 .reminder_list
   h3
@@ -137,6 +146,6 @@
     margin-bottom: 15px
   a
     font: 14px Amaranth
-  hr
-    border: none
-    border-top: 2px dotted #e6e6e6
+hr
+  border: none
+  border-top: 2px dotted #e6e6e6
