--- a/app/assets/stylesheets/partials/_layout.sass
+++ b/app/assets/stylesheets/partials/_layout.sass
@@ -27,3 +27,13 @@
 
 .hidden
   display: none
+
+.inline
+  display: inline-block
+  
+.left, .right
+  display: inline
+.left
+  float: left
+.right
+  float: right
