--- a/app/assets/stylesheets/partials/_base.sass
+++ b/app/assets/stylesheets/partials/_base.sass
@@ -68,7 +68,6 @@ h4
     color: #000
     text-decoration: none
     +box-shadow(rgba(0, 0, 0, 0.7) 0 5px 0)
-    
   &.alt
     background: $one
     color: #fff
@@ -82,3 +81,24 @@ h4
     position: relative
     top: 3px
     +box-shadow(rgba(0, 0, 0, 0.1) 0 2px 0)
+    
+.cancel
+  color: $red
+  font: 14px Amaranth
+  padding-left: 5px
+  
+.delete
+  background: $red
+  color: #fff
+  display: inline-block
+  font: 14px Amaranth
+  margin-top: 5px
+  opacity: 0.2
+  padding: 5px 15px
+  +border-radius(3px)
+  +box-shadow(rgba(0, 0, 0, 0.1) 0 0 3px inset)
+  +text-shadow(rgba(0, 0, 0, 0.3) 0 1px 1px)
+  +transition(all 1s)
+  &:hover, &:focus
+    opacity: 1
+    text-decoration: none
