--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -41,7 +41,7 @@
           %li= link_to 'FAQ', '/faq'
           %li= link_to 'About', 'about'
           %li= link_to 'Contact Us', 'https://hound.uservoice.com/', :class => 'js_uservoice_link'
-        %p &copy; 2012 Siyelo Software. All rights reserved.
+        %p.copyright &copy; 2012 Siyelo Software. All rights reserved.
         = render 'layouts/twitter_button'
 
     = javascript_include_tag "application"
