--- a/app/views/user_mailer/confirmation.html.haml
+++ b/app/views/user_mailer/confirmation.html.haml
@@ -6,10 +6,7 @@
     -# this is a smell - TODO refactor into separate views
     %table{:style => 'margin: 0 auto;width:600px;'}
       %tbody
-        %tr
-          %td{:style=>"background: url(http://www.hound.cc/assets/bg-brown.png) #331A03; padding: 20px;"}
-            = link_to "http://hound.cc/", :target => "_blank", :style => "outline:none;color:#fff;text-decoration:none;font-size:18px;font-weight:bold;" do
-              = image_tag"logo.png", :alt => "Hound.cc logo", :title => "Hound.cc - Turn Your Emails Into Reminders"
+        = render 'header'
         - unless @user_active
           = render 'invite'
         - else
