--- a/app/views/user_mailer/reminder.html.haml
+++ b/app/views/user_mailer/reminder.html.haml
@@ -5,10 +5,7 @@
   %body{:style => "font-size:12px;font-family:Helvetica,Arial,sans-serif;margin:20px 0 0;"}
     %table{:style => "margin: 0 auto;width:600px;"}
       %tbody
-        %tr
-          %td{:style=>"background: url(http://www.hound.cc/assets/bg-brown.png) #331A03; padding: 20px;"}
-            = link_to "http://hound.cc/", :target => "_blank", :style => "outline:none;" do
-              = image_tag"logo.png"
+        = render 'header'
         %tr
           %td
             %h1{:style => "margin:40px 0 20px;"}= "Reminder: #{@original_subject}"
