overall mails refactor

--- a/app/views/devise/mailer/reset_password_instructions.html.haml
+++ b/app/views/devise/mailer/reset_password_instructions.html.haml
@@ -1,6 +1,21 @@
-%p
-  Hello #{@resource.email}!
-%p Someone has requested a link to change your password, and you can do this through the link below.
-%p= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token)
-%p If you didn't request this, please ignore this email.
-%p Your password won't change until you access the link above and create a new one.
+!!!
+%html
+  %head
+    %meta{ 'content' => "text/html; charset=UTF-8", 'http-equiv' => "Content-Type" }
+  %body{:style => "background:url(http://hound.cc/assets/bg.png);font-size:12px;font-family:Helvetica,Arial,sans-serif;margin:20px 0 0;"}
+    %table{:style => "margin: 0 auto;width:600px;"}
+      %tbody
+        = render 'user_mailer/header'
+        %tr
+          %td
+            %h1{:style => "margin:40px 0 0;"} Hello #{@resource.email}!
+        %tr
+          %td
+            %p Someone has requested a link to change your password, and you can do this through the link below.
+            %p= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token), :style => "color: #E88300"
+        = render 'user_mailer/hr'
+
+        %tr
+          %td
+            %p If you didn't request this, please ignore this email.
+            %p Your password won't change until you access the link above and create a new one.
