--- a/app/views/devise/mailer/invitation_instructions.html.haml
+++ b/app/views/devise/mailer/invitation_instructions.html.haml
@@ -1,9 +1,22 @@
-%p
-  Hello #{@resource.email}!
-%p
-  Someone has invited you to #{root_url}, you can accept it through the link below.
-%p= link_to 'Accept invitation', accept_invitation_url(@resource, :invitation_token => @resource.invitation_token)
-%p
-  If you don't want to accept the invitation, please ignore this email.
-  %br/
-  Your account won't be created until you access the link above and set your password.
+!!!
+%html
+  %head
+    %meta{ 'content' => "text/html; charset=UTF-8", 'http-equiv' => "Content-Type" }
+  %body{:style => "background:url(http://hound.cc/assets/bg.png);font-size:12px;font-family:Helvetica,Arial,sans-serif;margin:20px 0 0;"}
+    %table{:style => "margin: 0 auto;width:600px;"}
+      %tbody
+        = render 'user_mailer/header'
+        %tr
+          %td
+            %h1{:style => "margin:40px 0 0;"} Hello #{@resource.email}!
+        %tr
+          %td
+            %p Someone has invited you to #{root_url}, you can accept it through the link below.
+            %p= link_to 'Accept invitation', accept_invitation_url(@resource, :invitation_token => @resource.invitation_token), :style => "color: #E88300"
+        = render 'user_mailer/hr'
+        %tr
+          %td
+            %p
+              If you don't want to accept the invitation, please ignore this email.
+              %br
+              Your account won't be created until you access the link above and set your password.
