--- a/app/views/user_mailer/reminder.html.haml
+++ b/app/views/user_mailer/reminder.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{ 'content' => "text/html; charset=UTF-8", 'http-equiv' => "Content-Type" }
-  %body{:style => "font-size:12px;font-family:Helvetica,Arial,sans-serif;margin:20px 0 0;"}
+  %body{:style => "background:url(http://hound.cc/assets/bg.png);font-size:12px;font-family:Helvetica,Arial,sans-serif;margin:20px 0 0;"}
     %table{:style => "margin: 0 auto;width:600px;"}
       %tbody
         = render 'header'
