Styles for snooze views

--- a/app/views/snooze/informed_of_snooze.html.haml
+++ b/app/views/snooze/informed_of_snooze.html.haml
@@ -1,2 +1,4 @@
-%h1 We have informed all relevant parties.
-%h3 Thank you for using HOUND!
+#devise.wide
+  %h2 We have informed all relevant parties.
+  %p Thank you for using hound.cc!
+  %br
