--- a/app/views/snooze/snooze_failed.html.haml
+++ b/app/views/snooze/snooze_failed.html.haml
@@ -1,8 +1,9 @@
-%h1 Your reminder could not be snoozed
--if @reminder.snooze_token != params[:token]
-  The snooze token is no longer valid (we change it everytime you snooze a reminder to prevent accidental snoozing).
-  %br
-  Please login to manage your reminders.
-- else
-  Please use the links in the reminder email to snooze the reminder
-
+#devise.wide
+  %h2 Your reminder could not be snoozed
+  - if @reminder.snooze_token != params[:token]
+    %p The snooze token is no longer valid (we change it everytime you snooze a reminder to prevent accidental snoozing).
+    %br
+    %p Please login to manage your reminders.
+  - else
+    %p Please use the links in the reminder email to snooze the reminder.
+    %br
