--- a/app/assets/stylesheets/partials/_app.sass
+++ b/app/assets/stylesheets/partials/_app.sass
@@ -6,6 +6,14 @@
   +border-radius(3px)
   +box-shadow(rgba(0, 0, 0, 0.1) 0 0 5px)
 
+  &.wide
+    margin-bottom: 40px
+    width: 600px
+
+    p
+      color: #777
+      font: 16px/1.4 Amaranth
+
 #devise, #settings
   form
     padding-bottom: 20px
