--- a/app/views/user_mailer/_body.html.haml
+++ b/app/views/user_mailer/_body.html.haml
@@ -1,8 +1,8 @@
 %tr
-  %td
+  %td{:colspan=>"2"}
     %hr{:style => "background:none;border:none;border-top:2px dotted #ddd;"}
 %tr
-  %td
+  %td{:colspan=>"2", :style => "padding-bottom: 40px;"}
     - unless body.empty?
       = body
     - else
