--- a/app/views/user_mailer/_menu.html.haml
+++ b/app/views/user_mailer/_menu.html.haml
@@ -1,5 +1,5 @@
 %tr
-  %td
+  %td{:colspan=>"2"}
     %ul
       %li= link_to "Upcoming", reminders_url, :style => "color: #E88300"
       %li= link_to "Settings", settings_url, :style => "color: #E88300"
