Added styles to error email

--- a/app/views/shared/_supported_date_formats.html.haml
+++ b/app/views/shared/_supported_date_formats.html.haml
@@ -1,49 +1,49 @@
 %h4 From Now
 
 %ul
-  %li= mail_to '2minutes@hound.cc'
-  %li= mail_to '3hours@hound.cc'
-  %li= mail_to '1day@hound.cc'
-  %li= mail_to '2weeks@hound.cc'
-  %li= mail_to '3months@hound.cc'
+  %li= mail_to '2minutes@hound.cc', '2minutes@hound.cc', :style => "color: #{@link_color}"
+  %li= mail_to '3hours@hound.cc', '3hours@hound.cc', :style => "color: #{@link_color}"
+  %li= mail_to '1day@hound.cc', '1day@hound.cc', :style => "color: #{@link_color}"
+  %li= mail_to '2weeks@hound.cc', '2weeks@hound.cc', :style => "color: #{@link_color}"
+  %li= mail_to '3months@hound.cc', '3months@hound.cc', :style => "color: #{@link_color}"
 
 %h4 Composite
 %ul
   %li
-    = mail_to '1day2hours@hound.cc'
+    = mail_to '1day2hours@hound.cc', '1day2hours@hound.cc', :style => "color: #{@link_color}"
 
 %h4 Weekdays
 %ul
-  %li= mail_to 'friday@hound.cc'
-  %li= mail_to 'nexttuesday@hound.cc'
-  %li= mail_to 'nextweek@hound.cc'
+  %li= mail_to 'friday@hound.cc', 'friday@hound.cc', :style => "color: #{@link_color}"
+  %li= mail_to 'nexttuesday@hound.cc', 'nexttuesday@hound.cc', :style => "color: #{@link_color}"
+  %li= mail_to 'nextweek@hound.cc', 'nextweek@hound.cc', :style => "color: #{@link_color}"
 
 %h4 Handy
 %ul
   %li
-    = mail_to 'tomorrow@hound.cc'
+    = mail_to 'tomorrow@hound.cc', 'tomorrow@hound.cc', :style => "color: #{@link_color}"
     (8am tomorrow)
   %li
-    = mail_to 'endofday@hound.cc'
+    = mail_to 'endofday@hound.cc', 'endofday@hound.cc', :style => "color: #{@link_color}"
     (5pm today)
 
 %h4 Actual Date
 %ul
   %li
-    = mail_to '04july@hound.cc'
+    = mail_to '04july@hound.cc', '04july@hound.cc', :style => "color: #{@link_color}"
     (4th July)
   %li
-    = mail_to 'aug-10@hound.cc'
+    = mail_to 'aug-10@hound.cc', 'aug-10@hound.cc', :style => "color: #{@link_color}"
     (August 10)
 
 %h4 Abbreviations
 %ul
   %li
-    = mail_to '2m@hound.cc'
+    = mail_to '2m@hound.cc', '2m@hound.cc', :style => "color: #{@link_color}"
     (2 minutes)
   %li
-    = mail_to '1mo@hound.cc'
+    = mail_to '1mo@hound.cc', '1mo@hound.cc', :style => "color: #{@link_color}"
     (1 month)
   %li
-    = mail_to 'tom@hound.cc'
+    = mail_to 'tom@hound.cc', 'tom@hound.cc', :style => "color: #{@link_color}"
     (tomorrow)
