--- a/app/views/user_mailer/error.html.haml
+++ b/app/views/user_mailer/error.html.haml
@@ -1,3 +1,5 @@
+= render "variables"
+
 !!!
 %html
   %head
@@ -15,7 +17,7 @@
               We've included a list of the date formats we currently recognize. If
               you have a suggestion for a new format that isn't included, please don't
               hesitate to
-              = link_to "contact us", 'https://hound.uservoice.com'
+              = link_to "contact us", 'https://hound.uservoice.com', :style => "color: #{@link_color}"
               = "."
         %tr
           %td
@@ -28,5 +30,5 @@
             %p
               We hope the above list helps. If you have a question that remains unanswered,
               please
-              = link_to "contact us", 'https://hound.uservoice.com', :style => "color: #E88300"
+              = link_to "contact us", 'https://hound.uservoice.com', :style => "color: #{@link_color}"
 
