recipient reminder table style

--- a/app/views/user_mailer/recipient_reminder.html.haml
+++ b/app/views/user_mailer/recipient_reminder.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{ 'content' => "text/html; charset=UTF-8", 'http-equiv' => "Content-Type" }
   %body{:style => "background:url(http://hound.cc/assets/bg.png);font-size:12px;font-family:Helvetica,Arial,sans-serif;margin:20px 0 0;"}
-    %table
+    %table{:style => "margin: 0 auto;width:600px;"}
       %tbody
         = render 'header'
         %tr
