--- a/app/views/user_mailer/_snooze_box.html.haml
+++ b/app/views/user_mailer/_snooze_box.html.haml
@@ -19,4 +19,4 @@
       %tr
         %td
         %td
-          = link_to 'other', edit_reminder_url(@reminder)
+          = link_to 'other', edit_reminder_url(@reminder), :style => "color: #{@link_color}"
