--- a/app/views/user_mailer/reminder.html.haml
+++ b/app/views/user_mailer/reminder.html.haml
@@ -1,3 +1,5 @@
+- render "variables"
+
 !!!
 %html
   %head
@@ -9,7 +11,7 @@
         %tr
           %td{:colspan=>"2"}
             %h1{:style => "margin:40px 0 20px;"}= "Reminder: #{@original_subject}"
-        
+
         = render 'hr'
 
         %tr
@@ -20,8 +22,8 @@
               == It has been snoozed #{@snoozed} times.
             %p More options:
             %ul
-              %li= link_to "Upcoming", reminders_url, :style => "color: #E88300"
-              %li= link_to "Settings", settings_url, :style => "color: #E88300"
+              %li= link_to "Upcoming", reminders_url, :style => "color: #{@link_color}"
+              %li= link_to "Settings", settings_url, :style => "color: #{@link_color}"
 
           %td{:style => "width:50%;"}
             = render 'snooze_box'
