Styles for confirmation pages

--- a/app/assets/stylesheets/partials/_app.sass
+++ b/app/assets/stylesheets/partials/_app.sass
@@ -14,6 +14,9 @@
       color: #777
       font: 16px/1.4 Amaranth
 
+    a
+      font-size: 16px
+
 #devise, #settings
   form
     padding-bottom: 20px
