--- a/app/views/confirmations/failed.html.haml
+++ b/app/views/confirmations/failed.html.haml
@@ -1,11 +1,14 @@
-%h1 Hmm, it looks like you've already turned confirmations off.
+#devise.wide
+  %h2 Hmm, it looks like you've already turned confirmations off
 
-%p
-  This usually happens if you already clicked the 'turn off confirmations'
-  link, in which case - you're all set.
+  %p
+    This usually happens if you already clicked the 'turn off confirmations' link, in which case - you're all set.
 
-%p
-  Remember, if you wish to update any of your preferences, please visit
-  = link_to "Settings", settings_path
+  %br
+  %p
+    Remember, if you wish to update any of your preferences, please visit
+    = link_to "Settings", settings_path
 
-%p Thank you for using Hound.cc!
+  %br
+  %p Thank you for using Hound.cc!
+  %br
