--- a/app/views/confirmations/success.html.haml
+++ b/app/views/confirmations/success.html.haml
@@ -1,9 +1,11 @@
-%h1 Confirmation emails are now off!
+#devise.wide
+  %h2 Confirmation emails are now off
 
-%p We have updated your settings - you will no longer receive confirmation emails.
+  %p We have updated your settings - you will no longer receive confirmation emails.
 
-%p
-  If you wish to undo this, or update any of your other preferences, please visit
-  = link_to "Settings", settings_path
+  %br
+  %p== If you wish to undo this, or update any of your other preferences, please visit #{link_to "Settings", settings_path}.
 
-%p Thank you for using Hound.cc!
+  %br
+  %p Thank you for using Hound.cc!
+  %br
