--- a/app/views/snooze/informed_of_snooze.html.haml
+++ b/app/views/snooze/informed_of_snooze.html.haml
@@ -1,4 +1,4 @@
 #devise.wide
   %h2 We have informed all relevant parties.
-  %p Thank you for using hound.cc!
+  %p Thank you for using Hound.cc!
   %br
