Improved activate button

--- a/app/views/user_mailer/_invite.html.haml
+++ b/app/views/user_mailer/_invite.html.haml
@@ -17,5 +17,5 @@
 
 %tr
   %td
-    %p=link_to "Yes it's me! Activate my account!", @activate_url, :style => "display: block;text-align:center;padding:10px;background:#E88300;color:#fff;font-weight:bold;font-size:14px;text-decoration:none;"
+    %p=link_to "Yes it's me! Activate my account!", @activate_url, :style => "display: block;text-align:center;padding:10px;background:#EEE;border:1px solid #DDD;color:#E88300;font-weight:bold;font-size:14px;text-decoration:none;"
 
