--- a/app/assets/stylesheets/partials/_header.sass
+++ b/app/assets/stylesheets/partials/_header.sass
@@ -1,5 +1,5 @@
 #header
-  background: url(image_path("bg-brown.png"))
+  background: url(image_path("bg-brown.png")) $three
   text-align: center
   +pie-clearfix
   .flash
@@ -9,7 +9,7 @@
     width: 14%
 
 #featured
-  background: url(image_path("bg-brown.png"))
+  background: url(image_path("bg-brown.png")) $three
   .wrapper
     overflow: hidden
     text-align: left
